@@ -43,7 +43,9 @@ module Netzke
     # Extra javascripts
     def self.include_js
       [
-        "#{File.dirname(__FILE__)}/form_panel_extras/javascripts/xcheckbox.js"
+        "#{File.dirname(__FILE__)}/form_panel_extras/javascripts/xcheckbox.js",
+        Netzke::Base.config[:ext_location] + "/examples/ux/FileUploadField.js",
+        "#{File.dirname(__FILE__)}/form_panel_extras/javascripts/netzkefileupload.js"
       ]
     end
     
