@@ -1,0 +1,5 @@
+Ext.netzke.FileUploadField = Ext.extend(Ext.ux.form.FileUploadField, {
+  buttonText: "..."
+});
+
+Ext.reg('netzkefileuploadfield', Ext.netzke.FileUploadField);
